html & css layout v2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,13 @@
 
 /* ORDER INPUT ACTIONS */
 
-/* ORDER INPUT ACTIONS REQUIRED-INFO */
+/* ORDER INPUT ACTIONS LEFT */
 
-/* ORDER INPUT ACTIONS BUTTONS */
+/* ORDER INPUT ACTIONS LEFT REQUIRED-INFO */
+
+/* ORDER INPUT ACTIONS RIGHT */
+
+/* ORDER INPUT ACTIONS RIGHT BUTTONS */
 
 /* ORDER INPUT FORM */
 
@@ -48,12 +52,12 @@
 
 /* ORDER OUTPUT TOTALS-AND-SHIP */
 
-/* ORDER OUTPUT TOTALS-AND-SHIP SHIP-INPUT */
+/* ORDER OUTPUT TOTALS-AND-SHIP LEFT SHIP-INPUT */
 
-/* ORDER OUTPUT TOTALS-AND-SHIP TOTALS */
+/* ORDER OUTPUT TOTALS-AND-SHIP RIGHT TOTALS */
 
 /* ORDER OUTPUT ACTIONS */
 
-/* ORDER OUTPUT ACTIONS REQUIRED-INFO */
+/* ORDER OUTPUT ACTIONS LEFT REQUIRED-INFO */
 
-/* ORDER OUTPUT ACTIONS BUTTONS */
+/* ORDER OUTPUT ACTIONS RIGHT BUTTONS */
