--- a/7/style.css
+++ b/7/style.css
@@ -1,8 +1,13 @@
+body {
+  height: 100vh;
+  margin: 0;
+}
+
 .page {
   /* LAYOUT BORDER */
   border: 2px solid black;
   width: 99%;
-  height: 95vh;
+  height: 99%;
   display: flex;
   flex-direction: column;
   padding: 0.1rem;
@@ -39,7 +44,7 @@
 }
 
 .page > .head {
-  flex: .5;
+  flex: 0.5;
 }
 
 .page > .body {
@@ -57,7 +62,6 @@
   display: flex;
   align-items: center;
   background-color: rgb(242, 185, 223);
-
 }
 
 .page > .head > .menu {
@@ -72,7 +76,6 @@
   display: flex;
   align-items: center;
   background-color: rgb(165, 235, 243);
-
 }
 
 .page > .head > .company > .logo {
@@ -116,17 +119,14 @@
 .page > .body > .content > .head {
   flex: 0.1;
   background-color: rgb(239, 214, 161);
-
 }
 
 .page > .body > .content > .body {
   flex: 1;
   background-color: rgb(175, 239, 161);
-
 }
 
 .page > .body > .content > .foot {
   flex: 0.1;
   background-color: rgb(226, 198, 240);
-
 }
